[tool.poetry]
name = "drone-ece-499"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
adafruit-blinka = "^8.25.0"
pillow = "^10.1.0"
rpi-gpio = "^0.7.1"
adafruit-circuitpython-ssd1306 = "^2.12.15"
pyyaml = "^6.0.1"
mavproxy = "^1.8.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
